# hortcmd

./: .gitignore  CLAUDE.md  Concept.md  README.md  aider.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/fs/: archive.rs  attrs.rs  compare.rs  dir.rs  file.rs  filecompare.rs  git.rs  mod.rs  preview.rs  props.rs  search.rs  tags.rs  watch.rs
src/components/ui/: AppDialog.tsx  CompareDialog.tsx  ExportDialog.tsx  FileBrowserDialog.tsx  FileCompareDialog.tsx  FileContextMenu.tsx  OperationDialogs.tsx  PreviewDialog.tsx  PropertiesDialog.tsx  RenameDialog.tsx  SearchDialog.tsx  SettingsDialog.tsx  TransferView.tsx  dialogControls.tsx
src/features/commander/: CommandBar.tsx  FunctionBar.tsx  actions.ts  archivePw.ts  exportList.ts  fileOps.ts  navigate.ts  preview.ts  renameRules.ts  selection.ts  useKeyboard.ts
src/features/panel/: DirTree.tsx  DriveSelect.tsx  FileTable.tsx  FilterBar.tsx  Panel.tsx  PathBar.tsx  StatusBar.tsx  TabBar.tsx  columns.tsx
src/i18n/: dictionaries.ts
src/ipc/: client.ts
src/ipc/bindings/: Checksums.ts  CollisionReq.ts  DiffEntry.ts  DiffLine.ts  DirEntry.ts  DirListing.ts  Drive.ts  ExifTag.ts  FileDiff.ts  FileProps.ts  GitStatus.ts  GitStatusEvent.ts  HexRow.ts  OpDone.ts  OpProgress.ts  OpResult.ts  Preview.ts  SearchHit.ts  Tag.ts  XattrItem.ts  index.ts
src/lib/: archive.ts  clipboard.ts  cn.ts  fileColors.ts  fileIcon.tsx  format.ts  gitColor.ts  glob.ts  path.ts  platform.ts  preview.ts  windowState.ts
src/store/: clipboardStore.ts  compareStore.ts  dialogSizeStore.ts  exportStore.ts  fileBrowserStore.ts  fileCompareStore.ts  historyStore.ts  opsStore.ts  panesStore.ts  propsStore.ts  renameStore.ts  searchStore.ts  sessionStore.ts  settingsStore.ts  transfersStore.ts
